MAT-19 after PR remarks